examples/__outputs__/30_gql/gql_gql-document-node_gql-typed_gql-typed-document-node__gql-typed-document-node-typed.output.txt

node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error: Cannot find package '/some/path/to/gql_gql-document-node_gql-typed_gql-typed-document-node__gql-typed-document-node-typed.ts:XX:XX
    at legacyMainResolve (node:internal/modules/esm/resolve:XX:XX)
    at packageResolve (node:internal/modules/esm/resolve:XX:XX)
    at moduleResolve (node:internal/modules/esm/resolve:XX:XX)
    at defaultResolve (node:internal/modules/esm/resolve:XX:XX)
    at nextResolve (node:internal/modules/esm/hooks:XX:XX)
    at resolveBase (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1728314921769:XX:XX)
    at resolveDirectory (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1728314921769:XX:XX)
    at resolveTsPaths (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1728314921769:XX:XX)
    at resolve (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1728314921769:XX:XX)
    at nextResolve (node:internal/modules/esm/hooks:XX:XX) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js vXX.XX.XX